--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Run Tests
         run: go test -cover ./...
 
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Security check
+        run: gosec ./...
+
   style:
     name: Style
     runs-on: ubuntu-latest
@@ -34,7 +40,7 @@ jobs:
         with:
           go-version: "1.25.1"
 
-      - name: Formatting Check
+      - name: Formatting check
         run: test -z $(go fmt ./...)
 
       - name: Install staticcheck
